[project]
name = "notification_router"
authors = [
    {name = "Jacky Chen", email = "jacky9813@hotmail.com"}
]
description = "A webhook translator that converts support notification source to notification services."
readme = "README.rst"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "Flask>=3.0.0",
    "flasgger>=0.9.7.1",
    "tabulate>=0.9.0"
]
dynamic = [
    "classifiers",
    "version"
]

[project.entry-points.'notification_router.source_plugins']
sample = "notification_router.source_sample:SampleSource"

[project.entry-points.'notification_router.destination_plugins']
echo = "notification_router.destination_echo:EchoDestination"

[build-system]
requires = [
    "setuptools >= 68.0",
    "setuptools-scm[toml] >= 8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
notification_router = "notification_router"

[tool.setuptools.dynamic]
classifiers = {file = ".classifiers"}

[tool.setuptools_scm]
